--- a/index.html
+++ b/index.html
@@ -2,8 +2,19 @@
 <html>
 <body>
 
-<h1>Anni Emilia Mattila</h1>
-<p>tämä on testi sivu.</p>
+<h2>Annin testisivu 2</h2>
+
+<p>tänään yritetään visuaalista:</p>
+
+<div style="background-image: url('img_girl.jpg');">
+moikka.
+mitä kuuluu. Tämä on tälläinen testi teksti.<br>
+En tiedä mitä tähän kirjottaisi. <br>
+Tueekohan tähän taustakuva.<br>
+
+</div>
+
+</p>
 
 </body>
 </html>
